# Voice-bot

./: .env.example  .gitignore  Dockerfile.livekit  README.md  agent.py  docker-compose.yml  langgraph_agent.py  livekit_agent.py  main.py  pyproject.toml  requirements.txt
agent-starter-react/: package-lock.json
