[project]
name = "voice-bot-adk"
version = "0.1.0"
description = ""
authors = [
    {name = "suvethaV30",email = "suvethav8122@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector] (>=1.2.9,<2.0.0)",
    "livekit-plugins-noise-cancellation (>=0.2.5,<0.3.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "fastapi[all] (>=0.116.2,<0.117.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain[llms] (>=0.3.27,<0.4.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "langchain-groq (>=0.3.8,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
